--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,12 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Hello World, HomeActivity"
-            />
+    <fragment
+            android:id="@+id/fragment_main"
+            android:name="com.bright.JSONParser.JSONFeedFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+        >
+    </fragment>
 </LinearLayout>
 
