Updated HomeActivity with dynamic fragment loading. Updating actionbar with JSON parameters.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,12 +4,11 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <fragment
+    <FrameLayout
             android:id="@+id/fragment_main"
-            android:name="com.bright.JSONParser.JSONFeedFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
         >
-    </fragment>
+    </FrameLayout>
 </LinearLayout>
 
