--- a/res/layout/fragment_jsonfeed.xml
+++ b/res/layout/fragment_jsonfeed.xml
@@ -4,6 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <ListView
+            android:id="@+id/fragment_jsonfeed_listview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+    </ListView>
+
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
