--- a/res/layout/json_feed_list_item.xml
+++ b/res/layout/json_feed_list_item.xml
@@ -2,19 +2,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+              android:background="@drawable/gradient">
 
     <TextView
             android:id="@+id/list_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#4F81BD"
+            android:textSize="20dp"
+            android:padding="5dp"/>
     <TextView
             android:id="@+id/list_item_details"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textSize="12dp"
+            android:padding="5dp"
+            android:layout_below="@id/list_item_title"/>
     <ImageView
             android:id="@+id/list_item_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_below="@id/list_item_title"
+            android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
