--- a/res/layout/json_feed_list_item.xml
+++ b/res/layout/json_feed_list_item.xml
@@ -7,23 +7,38 @@
 
     <TextView
             android:id="@+id/list_item_title"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#4F81BD"
-            android:textSize="20dp"
-            android:padding="5dp"/>
+            android:textSize="20sp"
+            android:padding="10dp"/>
+
     <TextView
             android:id="@+id/list_item_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:padding="5dp"
-            android:layout_below="@id/list_item_title"/>
+            android:textSize="12sp"
+            android:visibility="gone"
+            android:paddingBottom="10dp"
+            android:paddingTop="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:layout_below="@id/list_item_title"
+            android:layout_toLeftOf="@+id/list_item_image"
+            android:layout_alignParentStart="true"
+            />
+
     <ImageView
             android:id="@+id/list_item_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="110dp"
+            android:visibility="gone"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="30dp"
+            android:paddingBottom="10dp"
+            android:layout_alignParentEnd="true"
+            android:scaleType="fitStart"
             android:layout_below="@id/list_item_title"
-            android:layout_alignParentEnd="true"/>
+            />
 
 </RelativeLayout>
